--- a/app/assets/stylesheets/about_contact.scss
+++ b/app/assets/stylesheets/about_contact.scss
@@ -53,7 +53,6 @@
       a.btn{
         padding: 10%;
         display: block;
-        // height: 100%;
         width: 95%;
         border-style: solid;
         border-radius: 25px;
@@ -75,5 +74,35 @@
   float: left;
   width: 100%;
   height: 50%;
-  background-color: blue;
+  .blurb{
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .skill-container{
+    width: 100%;
+    margin: auto;
+    height: 150px;
+    background-color: #f3f3f3;
+    border-style: solid;
+    border-width: 0.5px;
+    border-radius: 15px;
+    padding: 7px;
+    margin-bottom: 10px;
+    .img-container{
+      img{
+        max-width: 50px;
+        max-height: 52px;
+      }
+    }
+    p{
+      margin-top: 0px;
+    }
+    p.skill-name{
+      margin-bottom: 0px;
+      margin-top: 5px;
+      font-weight: 900;
+      font-size: 20px;
+    }
+  }
 }
