--- a/app/assets/stylesheets/hex.scss
+++ b/app/assets/stylesheets/hex.scss
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
 }
-body {
-    background: rgb(123, 158, 158);
-}
+// body {
+//     background: black;//rgb(123, 158, 158);
+// }
 #hexGrid {
     overflow: hidden;
     width: 90%;
@@ -39,7 +39,7 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    color: #fff;
+    color: #fff!important;
     overflow: hidden;
     -webkit-transform: skewY(-30deg) rotate(60deg);
         -ms-transform: skewY(-30deg) rotate(60deg);
@@ -60,7 +60,7 @@ body {
     left:-1%; /* prevent line on the right where background doesn't cover image */
     padding: 5%;
     box-sizing:border-box;
-    background-color: rgba(0, 128, 128, 0.8);
+    background-color: rgba(29,175,255, 0.8);
     font-weight: 300;
     -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
             transition:          transform .2s ease-out, opacity .3s ease-out;
