--- a/app/views/static/about_and_contact.html.erb
+++ b/app/views/static/about_and_contact.html.erb
@@ -6,7 +6,9 @@
 <!--TODO: add social media links-->
 <div class="info-container">
   <h2>Patrick Watson</h2>
+  
   <h4>Montreal, QC</h4>
+  <h4>Currently: Freelancing and available</h4>
   <strong>Email: </strong><%= @email %><br />
   <strong>Phone: </strong><%= @phone_number %>
 
@@ -23,7 +25,7 @@
         <%= image_tag("instalogo.png") %>
       </li>
       <li>
-        <%= image_tag("snapchatlogo.png") %>
+        <a href=<%= @snapchat %>><%= image_tag("snapchatlogo.png") %>
       </li>
     </ul>
   </div>
@@ -42,7 +44,62 @@
 </div>
 
 <div class="blurb-container">
-  <p id="about-blurb">about</p>
-  <p id="skills-blurb">skills</p>
-  <p id="services-blurb">services</p>
+  <div id="about-blurb" class="blurb">
+    <h3>About Me</h3>
+    <p>Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum, libero vitae sagittis aliquet, ipsum nisi blandit velit, aliquet ultricies dolor quam ac urna. Praesent lacinia, mauris ultricies blandit porttitor, lacus dolor fringilla mauris, id bibendum turpis ipsum a lacus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam fringilla neque porta quam interdum, a vehicula ipsum venenatis. Proin dui quam, iaculis malesuada ante nec, porta ultrices felis. Proin sodales diam vel justo vulputate convallis. Etiam id nunc ut mauris porta accumsan in sed quam. Nullam egestas sed ipsum sed egestas. Vivamus facilisis finibus enim, eget condimentum ipsum sagittis in. Donec tristique luctus ex, sed euismod nibh mattis vel. Proin maximus a nisi vitae tempor. Mauris egestas magna felis, in sagittis massa maximus vitae. Fusce nulla orci, egestas dictum vehicula vel, auctor vitae nibh. Phasellus faucibus at ligula non efficitur.</p>
+  </div>
+
+  <div id="skills-blurb" class="blurb">
+    <h3>Skills</h3>
+    <div class="container-fluid">
+
+      <% (1..@number_of_rows).each do |n| %>
+        <div class="row">
+          <% (1..@skills_per_row).each do |i| %>
+            <% unless @skills[@index] == nil %>
+              <div class="col-md-3">
+                <div class="skill-container">
+                  <div class="img-container">
+                    <%= image_tag(@skills[@index].picture) %>
+                  </div>
+                  <p class="skill-name"><%= @skills[@index].name%></p>
+                  <p>Skill Level:</p>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: <%= "#{@skills[@index].level}" + "%"%> ">
+                      <span class="sr-only"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <% @index += 1 %>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div id="services-blurb" class="blurb">
+    <h3>Services</h3>
+    <p>
+      I offer many services ranging from, branding and copywriting to building data structures and APIs. a list of some of my services can be found below but for the best answer, just shoot me an email with some details of your project! If you are unsure about what technology would be best to help you reach your goals please don't hesitate to send me an email and I can give you my opinion!
+    </p>
+      <h4>Some of my services:</h4>
+      <ul>
+        <li>API construction</li>
+        <li>Logo design</li>
+        <li>Building a personal website like this one</li>
+        <li>Building a website to showcase your business</li>
+        <li>Front end web development</li>
+        <li>Wordpress development</li>
+        <li>Shopify store development</li>
+        <li>Landing page development</li>
+        <li>Web application development</li>
+      </ul>
+
+  </div>
 </div>
+
+
+
+
