--- a/app/assets/stylesheets/about_contact.scss
+++ b/app/assets/stylesheets/about_contact.scss
@@ -79,30 +79,30 @@
     padding-right: 50px;
   }
 
-  .skill-container{
-    width: 100%;
-    margin: auto;
-    height: 150px;
-    background-color: #f3f3f3;
-    border-style: solid;
-    border-width: 0.5px;
-    border-radius: 15px;
-    padding: 7px;
-    margin-bottom: 10px;
-    .img-container{
-      img{
-        max-width: 50px;
-        max-height: 52px;
-      }
-    }
-    p{
-      margin-top: 0px;
-    }
-    p.skill-name{
-      margin-bottom: 0px;
-      margin-top: 5px;
-      font-weight: 900;
-      font-size: 20px;
-    }
-  }
+  // .skill-container{
+  //   width: 100%;
+  //   margin: auto;
+  //   height: 150px;
+  //   background-color: #f3f3f3;
+  //   border-style: solid;
+  //   border-width: 0.5px;
+  //   border-radius: 15px;
+  //   padding: 7px;
+  //   margin-bottom: 10px;
+  //   .img-container{
+  //     img{
+  //       max-width: 50px;
+  //       max-height: 52px;
+  //     }
+  //   }
+  //   p{
+  //     margin-top: 0px;
+  //   }
+  //   p.skill-name{
+  //     margin-bottom: 0px;
+  //     margin-top: 5px;
+  //     font-weight: 900;
+  //     font-size: 20px;
+  //   }
+  // }
 }
