--- a/app/views/shared/_skill_tile.html.erb
+++ b/app/views/shared/_skill_tile.html.erb
@@ -15,6 +15,7 @@
       <div class="progress">
         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: <%= "#{skill.level}" + "%" %>">
           <span class="sr-only"></span>
+        </div>
       </div>
     <% end %>
     <!--end progress bar-->
