solve non loading images in production

--- a/app/views/static/about_and_contact.html.erb
+++ b/app/views/static/about_and_contact.html.erb
@@ -1,6 +1,6 @@
 <div class="dp-container">
   <div class="display-picture">
-    <%= image_tag("PatrickWatson.jpg", :alt => "selfie") %>
+    <%= image_tag("PatrickWatson.png", :alt => "selfie") %>
   </div>
 </div>
 <!--TODO: add social media links-->
