mobilize about me page and add instagram link

--- a/app/views/static/about_and_contact.html.erb
+++ b/app/views/static/about_and_contact.html.erb
@@ -1,48 +1,55 @@
-<div class="dp-container">
-  <div class="display-picture">
-    <%= image_tag("PatrickWatson.png", :alt => "selfie") %>
+<div class="container-fluid">
+  <div class="row">
+  <div class="col-md-6">
+    <div class="dp-container">
+      <div class="display-picture">
+        <%= image_tag("PatrickWatson.png", :alt => "selfie") %>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <!--TODO: add social media links-->
+    <div class="info-container">
+      <h2>Patrick Watson</h2>
+      
+      <h4>Montreal, QC</h4>
+      <h4>Currently: Freelancing and available</h4>
+      <strong>Email: </strong><%= @email %><br />
+      <strong>Phone: </strong><%= @phone_number %>
+
+      <div class="social-media">
+        <h4>Follow me on social media!</h4>
+        <ul>
+          <li>
+            <%= link_to image_tag("facebooklogo.png"), @facebook_link, :target => "blank" %>
+          </li>
+          <li>
+            <%= link_to image_tag("linkedinlogo.png"), @linkedin_link, :target => "blank" %>
+          </li>
+          <li>
+            <%=link_to image_tag("instalogo.png"), @instagram_link, :target => "blank" %>
+          </li>
+          <li>
+            <%= link_to image_tag("snapchatlogo.png"), @snapchat_link, :target => "blank" %>
+          </li>
+        </ul>
+      </div>
+
+      <div class="buttons">
+        <div class="button-container">
+          <a href="#" id="about-btn" class="btn">About</a>
+        </div>
+        <div class="button-container">
+          <a href="#" id="skills-btn" class="btn">Skills</a>
+        </div>
+        <div class="button-container">
+          <a href="#" id="services-btn" class="btn">Services</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<!--TODO: add social media links-->
-<div class="info-container">
-  <h2>Patrick Watson</h2>
-  
-  <h4>Montreal, QC</h4>
-  <h4>Currently: Freelancing and available</h4>
-  <strong>Email: </strong><%= @email %><br />
-  <strong>Phone: </strong><%= @phone_number %>
-
-  <div class="social-media">
-    <h4>Follow me on social media!</h4>
-    <ul>
-      <li>
-        <%= link_to image_tag("facebooklogo.png"), @facebook_link, :target => "blank" %>
-      </li>
-      <li>
-        <%= link_to image_tag("linkedinlogo.png"), @linkedin_link, :target => "blank" %>
-      </li>
-<!--       <li>
-        <%= image_tag("instalogo.png") %>
-      </li> -->
-      <li>
-        <%= link_to image_tag("snapchatlogo.png"), @snapchat_link, :target => "blank" %>
-      </li>
-    </ul>
-  </div>
-
-  <div class="buttons">
-    <div class="button-container">
-      <a href="#" id="about-btn" class="btn">About</a>
-    </div>
-    <div class="button-container">
-      <a href="#" id="skills-btn" class="btn">Skills</a>
-    </div>
-    <div class="button-container">
-      <a href="#" id="services-btn" class="btn">Services</a>
-    </div>
-  </div>
 </div>
-
 <div class="blurb-container">
   <div id="about-blurb" class="blurb">
     <h3>About Me</h3>
