mobilize landing page and buttons on about me page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,9 +1,11 @@
-<div class="background">
-  <%= image_tag("portfoliohero1.jpg", :alt => "hero") %>
-</div>
-<div class="headline">
-  <h1>Hi<h1/>
-  <h1>I'm <span class="myname">Patrick</span></h1>
+<div class="landing-page_wrapper">
+  <div class="background">
+    <%= image_tag("portfoliohero1.jpg", :alt => "hero") %>
+  </div>
+  <div class="headline">
+    <h1>Hi<h1/>
+    <h1>I'm <span class="myname">Patrick</span></h1>
 
-  <h2>I build stuff for the internet.</h2>
+    <h2>I build stuff for the internet.</h2>
+  </div>
 </div>
