--- a/app/assets/stylesheets/about_contact.scss
+++ b/app/assets/stylesheets/about_contact.scss
@@ -73,31 +73,27 @@
     padding-left: 50px;
     padding-right: 50px;
   }
-
-  // .skill-container{
-  //   width: 100%;
-  //   margin: auto;
-  //   height: 150px;
-  //   background-color: #f3f3f3;
-  //   border-style: solid;
-  //   border-width: 0.5px;
-  //   border-radius: 15px;
-  //   padding: 7px;
-  //   margin-bottom: 10px;
-  //   .img-container{
-  //     img{
-  //       max-width: 50px;
-  //       max-height: 52px;
-  //     }
-  //   }
-  //   p{
-  //     margin-top: 0px;
-  //   }
-  //   p.skill-name{
-  //     margin-bottom: 0px;
-  //     margin-top: 5px;
-  //     font-weight: 900;
-  //     font-size: 20px;
-  //   }
-  // }
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2){
+  // and (orientation: landscape) {
+    .dp-container{
+      //width: 100%;
+      .display-picture{
+        width: 100%;
+      }
+    }
+
+    .info-container{
+      .buttons{
+        .button-container{
+          a.btn{
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
