--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -1,3 +1,4 @@
+//landing page
 .background{
   width: 100%;
   height: 100%;
@@ -15,6 +16,7 @@
     overflow: hidden;
   }
 }
+
 .headline{
   margin: auto;
   width: 75%;
@@ -39,3 +41,35 @@
     font-size: 40px;
   }
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2){
+  //and (orientation: portrait) {
+    div.landing-page_wrapper{
+      width:100%;
+      overflow: hidden;
+      .background{
+        width: 100%;
+        img{
+          max-width: 200%;
+        }
+      }
+    }
+    .headline{
+      padding-top: 0px;
+      z-index: 1;
+      margin: auto;
+      width: 100%;
+      h1{
+        font-size: 50px;
+        .myname{
+          font-size: 75px;
+        }
+      }
+      h2{
+        font-size: 35px;
+      }
+    }
+  }
