--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link href="https://fonts.googleapis.com/css?family=Muli|Pinyon+Script" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
   <%= csrf_meta_tags %>
 </head>
 <body>
